<resources>
    <string name="app_name">SimpleMath</string>
    <string name="smallerIcon"><![CDATA[<]]></string>
    <string name="weiter">Weiter</string>
    <string name="du_hast_10_von_15_aufgaben_gel_st">Du hast 10 von 15 Aufgaben gelöst!</string>
    <string name="simplemath">SimpleMath</string>
    <string name="highscoreButtonText">Highscore</string>
    <string name="freies_spielButtonText">Freies Spiel</string>
    <string name="plus_symbol">+</string>
    <string name="defaultValueFreiesSpiel">1</string>
    <string name="minus_symbol">-</string>
    <string name="start">START</string>
    <string name="hallo_user">Hallo User</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="bestaetigen">bestätigen</string>
    <string name="gib_deinen_nutzernamen_ein">Gib deinen Nutzernamen ein</string>
    <string name="username">Username</string>
    <string name="user_erstellen">User erstellen</string>
    <string name="wei_ich_nicht">Weiß ich nicht</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="highscore_69">HIGHSCORE: 69</string>
    <string name="dein_score_68">dein Score: 68</string>
    <string name="_1_min">1 Min</string>
    <string name="hochzaehlen">Hochzaehlen</string>
    <string name="zahleneinf_gen">ZahlenEinfügen</string>
    <string name="gr_erkleiner">GrößerKleiner</string>
    <string name="zeit">Zeit:</string>
    <string name="aufgabe_1_von_15">Aufgabe 1 von 15</string>
    <string name="_16">16</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="sortiere_von_gro_nach_klein">Sortiere von groß nach klein</string>
    <string name="score">SCORE:</string>
    <string name="_1_2">1 + 2</string>
    <string name="score_0">SCORE: 0</string>
    <string name="start_firstLetterCapital">Start</string>
    <string name="_4_2_3">4 + 2 * 3 = ___</string>
    <string name="empty" />
    <string name="richtig">Richtig</string>
    <string name="neuer_username">neuer Username</string>
    <string name="umbenennen">umbenennen</string>
    <string name="entfernen">entfernen</string>
    <string name="neuen_user_erstellen">neuen User erstellen</string>
</resources>