<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSelection">

    <TextView
        android:id="@+id/helloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/highscoreButtonText"
        app:backgroundTint="#2196F3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/freiesSpiel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/freiesSpiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/freies_spielButtonText"
        app:backgroundTint="#FF00FF00"
        app:layout_constraintLeft_toRightOf="@id/highscore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/gameDuration"
        android:layout_width="316dp"
        android:layout_height="19dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_min"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/gameDuration"
        app:layout_constraintLeft_toLeftOf="@id/gameDuration" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollViewForGames"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/hochzaehlen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/default_button"
                android:contentDescription="@string/hochzaehlen"
                android:padding="10dp"
                android:src="@drawable/hochzaehlen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/zahlenEinfuegen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/default_button"
                android:contentDescription="@string/zahleneinf_gen"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/zahleneinfuegen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hochzaehlen" />

            <ImageButton
                android:id="@+id/groesserKleiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/default_button"
                android:contentDescription="@string/gr_erkleiner"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/groesserkleiner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zahlenEinfuegen" />

            <TextView
                android:id="@+id/countForHochzaehlen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValueFreiesSpiel"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hochzaehlen" />

            <Button
                android:id="@+id/plusHochzaehlen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/plus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/countForHochzaehlen"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hochzaehlen" />

            <Button
                android:id="@+id/minusHochzaehlen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/minus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/countForHochzaehlen"
                app:layout_constraintTop_toBottomOf="@id/hochzaehlen" />

            <TextView
                android:id="@+id/countForZahlenEinfuegen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValueFreiesSpiel"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zahlenEinfuegen" />

            <Button
                android:id="@+id/plusZahlenEinfuegen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/plus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/countForZahlenEinfuegen"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zahlenEinfuegen" />

            <Button
                android:id="@+id/minusZahlenEinfuegen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/minus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/countForZahlenEinfuegen"
                app:layout_constraintTop_toBottomOf="@id/zahlenEinfuegen" />

            <TextView
                android:id="@+id/countForGroesserKleiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValueFreiesSpiel"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groesserKleiner" />

            <Button
                android:id="@+id/plusGroesserKleiner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/plus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/countForGroesserKleiner"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groesserKleiner" />

            <Button
                android:id="@+id/minusGroesserKleiner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/unserBlau"
                android:text="@string/minus_symbol"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/countForGroesserKleiner"
                app:layout_constraintTop_toBottomOf="@id/groesserKleiner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/unserBlau"
        android:text="@string/start"
        android:textColor="#FFEB3B"
        android:textSize="30sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ScrollViewForGames" />

</androidx.constraintlayout.widget.ConstraintLayout>